<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:fitsSystemWindows="true"
    >


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:text="@string/obs_quiz"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                />

            <include layout="@layout/content_main_head"   android:visibility="gone" />
            <include layout="@layout/content_main_health" android:visibility="gone" />
            <include layout="@layout/content_main_jobs"   android:visibility="gone" />
            <include layout="@layout/content_main_self"   android:visibility="gone" />

            <ImageView
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:background="@mipmap/ic_launcher"
                android:layout_gravity="center"
                android:padding="40dp"
                />

        </LinearLayout>
    </ScrollView>



    <LinearLayout
        tools:visibility="visible"
        android:visibility="gone"
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:layout_gravity="bottom|center_horizontal|end"
        android:weightSum="2"
        >
        <Button
            android:id="@+id/submit"
            android:onClick="sumitOnClick"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_green_dark"
            android:text="@string/submit"
            android:textColor="@android:color/white"
            />
        <Button
            android:id="@+id/submitImprove"
            android:onClick="sumitOnClick"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_green_light"
            android:text="@string/button_improve"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            />
    </LinearLayout>



</android.support.design.widget.CoordinatorLayout>
